fixed a bigger visual bug regarding scrollbars on all pages

--- a/src/app/car-selector/car-selector.component.css
+++ b/src/app/car-selector/car-selector.component.css
@@ -275,3 +275,24 @@ html, body {
 .push {
    height: 180px;
 }
+
+.whole {
+   overflow: hidden;
+   width: 100%;
+   height: 100%;
+}
+
+.pushed {
+   overflow: auto;
+   position: absolute;
+   width: 100%;
+   height: 54px;
+}
+
+.main {
+   overflow: auto;
+   position: absolute;
+   width: 100%;
+   top: 54px;
+   bottom: 0;
+}
