--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -5,7 +5,7 @@
 .bcg-image {
    position: absolute;
    clip-path: polygon(0% 0%, 100% 0%, 100% 96.5%, 90% 96.5%, 89.25% 100%, 10.75% 100%, 10% 96.5%, 0% 96.5%);
-   top: 80px;
+   top: 0px;
    left: 0px;
    margin: 0;
    padding: 0;
