--- a/src/app/main-navigation/main-navigation.component.css
+++ b/src/app/main-navigation/main-navigation.component.css
@@ -302,7 +302,7 @@
 }
 
 .profile-position {
-   position: absolute;
+   position: fixed;
    margin-top: -5px;
    right: 0.5%;
 }
